# MAFP

./: .env.example  .gitignore  README.md  agents.py  config.example.yaml  config.py  data_loader.py  forecasting.py  main.py  orchestrator.py  prompts.py  pyproject.toml  reporting.py  requirements.txt  zone_selection.py
output/: context_snippets.json  forecast_metrics.csv  forecast_metrics.md  rationale_trace.csv  rationale_trace.json  rationale_trace.md  selected_zones.csv
output/cache/: poi_zone_counts.csv  zone_profiles.csv
output/forecast_details/: zone_102_forecast_vs_actual.csv  zone_104_forecast_vs_actual.csv
tests/: test_core.py
