[project]
name = "mapf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "torch>=2.0.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "scikit-learn>=1.3",
    "timesfm @ git+https://github.com/google-research/timesfm.git",
    "ipykernel>=7.2.0",
    "requests>=2.34.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
